// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`phone Android landscape renders as expected 1`] = `
<div
  className="shadow-darken25 mx-auto border border--gray-dark relative bg-gray-deep wmax600 flex"
  style={
    Object {
      "borderRadius": "30px",
      "borderWidth": "12px",
    }
  }
>
  <div
    className="bg-gray-dark absolute h3 round-t none block-mm"
    style={
      Object {
        "left": "180px",
        "top": "-15px",
        "width": "90px",
      }
    }
  />
  <div
    className="bg-gray-dark absolute h3 round-t none block-mm"
    style={
      Object {
        "left": "90px",
        "top": "-15px",
        "width": "45px",
      }
    }
  />
  <div
    className="flex flex--center-cross z2 relative h-auto bg-gray-dark w36 pl12"
    style={
      Object {
        "borderRadius": "0",
      }
    }
  >
    <div
      className="bg-gray-dark flex-child-grow flex relative"
      style={
        Object {
          "borderRadius": "0",
        }
      }
    >
      <div
        className="bg-gray-deep round-full h60 w6"
      />
      <div
        className="bg-gray-deep round-full w6 h6 absolute"
        style={
          Object {
            "bottom": "-12px",
            "left": undefined,
            "order": undefined,
          }
        }
      />
    </div>
  </div>
  <div
    className="relative flex flex--center-cross flex--center-main z1 hmin120-mm hmin60"
    style={
      Object {
        "borderRadius": undefined,
        "height": "100%",
        "marginLeft": undefined,
        "marginTop": undefined,
        "overflow": "hidden",
        "width": "calc(100% - 36px)",
      }
    }
  >
    <div
      className="loading loading--dark absolute z0"
    />
    <div
      className="relative overflow-hidden"
    >
      <img
        alt="example"
        src="../files/ios-horizontal.png"
      />
    </div>
  </div>
  <div
    className="flex bg-gray-dark flex--center-main flex--center-cross w36"
  >
    <div
      className="bg-gray-deep round-full h60 w6"
    />
  </div>
</div>
`;

exports[`phone Android portrait renders as expected 1`] = `
<div
  className="shadow-darken25 mx-auto border border--gray-dark relative bg-gray-deep wmax300"
  style={
    Object {
      "borderRadius": "30px",
      "borderWidth": "12px",
    }
  }
>
  <div
    className="bg-gray-dark absolute w3 round-r"
    style={
      Object {
        "height": "80px",
        "right": "-15px",
        "top": "180px",
      }
    }
  />
  <div
    className="bg-gray-dark absolute w3 round-r"
    style={
      Object {
        "height": "45px",
        "right": "-15px",
        "top": "90px",
      }
    }
  />
  <div
    className="flex flex--center-cross z2 relative"
    style={
      Object {
        "borderRadius": "0",
      }
    }
  >
    <div
      className="bg-gray-dark flex-child-grow flex relative flex--center-main mx-auto w-full h36 pt12"
      style={
        Object {
          "borderRadius": "0",
        }
      }
    >
      <div
        className="bg-gray-deep round-full w60 h6"
      />
      <div
        className="bg-gray-deep round-full w6 h6 relative"
        style={
          Object {
            "bottom": undefined,
            "left": "-12px",
            "order": -1,
          }
        }
      />
    </div>
  </div>
  <div
    className="relative flex flex--center-cross flex--center-main z1 hmin300"
    style={
      Object {
        "borderRadius": undefined,
        "height": "calc(100% - 72px)",
        "marginLeft": undefined,
        "marginTop": undefined,
        "overflow": "hidden",
        "width": undefined,
      }
    }
  >
    <div
      className="loading loading--dark absolute z0"
    />
    <div
      className="relative overflow-hidden"
    >
      <img
        alt="example"
        src="../files/ios-vertical.png"
      />
    </div>
  </div>
  <div
    className="flex bg-gray-dark flex--center-main flex--center-cross h36"
  >
    <div
      className="bg-gray-deep round-full w60 h6"
    />
  </div>
</div>
`;

exports[`phone iOS landscape renders as expected 1`] = `
<div
  className="shadow-darken25 mx-auto border border--gray-dark relative bg-gray-deep wmax600 flex"
  style={
    Object {
      "borderRadius": "30px",
      "borderWidth": "12px",
    }
  }
>
  <div
    className="bg-gray-dark absolute h3 round-t none block-mm"
    style={
      Object {
        "left": "60px",
        "top": "-15px",
        "width": "90px",
      }
    }
  />
  <div
    className="flex absolute flex--space-between-main w60"
    style={
      Object {
        "bottom": "-15px",
        "left": "55px",
      }
    }
  >
    <div
      className="bg-gray-dark h3 round-b w24 none block-mm"
    />
    <div
      className="bg-gray-dark h3 round-b w24 none block-mm"
    />
  </div>
  <div
    className="flex flex--center-cross z2 relative h-auto w18"
    style={
      Object {
        "borderRadius": "18px 18px 0 0",
      }
    }
  >
    <div
      className="bg-gray-dark flex-child-grow flex relative h120 flex--center-main flex--column flex--column-reverse"
      style={
        Object {
          "borderRadius": "0 12px 12px 0",
        }
      }
    >
      <div
        className="absolute"
        style={
          Object {
            "background": "radial-gradient(circle at right top, transparent 0, transparent 75%, #0e2127 75%, #0e2127 100%)",
            "height": "10px",
            "marginLeft": false,
            "top": "-10px",
            "width": "10px",
          }
        }
      />
      <div
        className="bg-gray-deep round-full h60 w6"
      />
      <div
        className="bg-gray-deep round-full w6 h6 mb6 mt-neg12"
        style={
          Object {
            "bottom": undefined,
            "left": undefined,
            "order": undefined,
          }
        }
      />
      <div
        className="absolute"
        style={
          Object {
            "background": "radial-gradient(circle at bottom right, transparent 0, transparent 75%, #0e2127 75%, #0e2127 100%)",
            "bottom": "-10px",
            "height": "10px",
            "marginRight": false,
            "width": "10px",
          }
        }
      />
    </div>
  </div>
  <div
    className="relative flex flex--center-cross flex--center-main z1 hmin120-mm hmin60"
    style={
      Object {
        "borderRadius": "18px",
        "height": "100%",
        "marginLeft": "-18px",
        "marginTop": undefined,
        "overflow": "hidden",
        "width": "100%",
      }
    }
  >
    <div
      className="loading loading--dark absolute z0"
    />
    <div
      className="relative overflow-hidden"
    >
      <div
        className="relative flex-parent flex-parent--center-main flex-parent--center-cross bg-gray"
        onFocus={[Function]}
        onMouseLeave={[Function]}
        onMouseOver={[Function]}
      >
        <button
          className="bg-darken75 bg-darken50-on-hover w60 h60 py12 px12 w120-mm h120-mm py18-mm px18-mm round cursor-pointer z1 absolute"
          onClick={[Function]}
        >
          <svg
            aria-label="Play"
            fill="#fff"
            focusable="false"
            role="img"
            viewBox="0 0 20 20"
            width="100%"
          >
            <polygon
              points="1,0 20,10 1,20"
            />
          </svg>
        </button>
        <video
          autoPlay={true}
          className="block mx-auto"
          loop={true}
          muted={true}
          onEnded={[Function]}
          onPause={[Function]}
          onPlay={[Function]}
          playsInline={true}
          src="../files/browser-example.mp4"
          title="example"
          type="video/mp4"
          width="100%"
        >
          <p>
            Your browser doesn't support HTML5 video. Open
             
            <a
              href="../files/browser-example.mp4"
            >
              link to the video
            </a>
            .
          </p>
        </video>
      </div>
    </div>
  </div>
</div>
`;

exports[`phone iOS portrait renders as expected 1`] = `
<div
  className="shadow-darken25 mx-auto border border--gray-dark relative bg-gray-deep wmax300"
  style={
    Object {
      "borderRadius": "30px",
      "borderWidth": "12px",
    }
  }
>
  <div
    className="bg-gray-dark absolute w3 round-r"
    style={
      Object {
        "height": "80px",
        "right": "-15px",
        "top": "90px",
      }
    }
  />
  <div
    className="flex absolute flex--space-between-main flex--column h60"
    style={
      Object {
        "left": "-15px",
        "top": "75px",
      }
    }
  >
    <div
      className="bg-gray-dark w3 round-l h24"
    />
    <div
      className="bg-gray-dark w3 round-l h24"
    />
  </div>
  <div
    className="flex flex--center-cross z2 relative round-t-full"
    style={
      Object {
        "borderRadius": "0",
      }
    }
  >
    <div
      className="bg-gray-dark flex-child-grow flex relative flex--center-main mx-auto h18 wmax120"
      style={
        Object {
          "borderRadius": "0 0 12px 12px",
        }
      }
    >
      <div
        className="absolute top left"
        style={
          Object {
            "background": "radial-gradient(circle at bottom left, transparent 0, transparent 75%, #0e2127 75%, #0e2127 100%)",
            "height": "10px",
            "marginLeft": "-10px",
            "top": false,
            "width": "10px",
          }
        }
      />
      <div
        className="bg-gray-deep round-full w60 h6"
      />
      <div
        className="bg-gray-deep round-full w6 h6 ml6 mr-neg12"
        style={
          Object {
            "bottom": undefined,
            "left": undefined,
            "order": undefined,
          }
        }
      />
      <div
        className="absolute top right"
        style={
          Object {
            "background": "radial-gradient(circle at bottom right, transparent 0, transparent 75%, #0e2127 75%, #0e2127 100%)",
            "bottom": false,
            "height": "10px",
            "marginRight": "-10px",
            "width": "10px",
          }
        }
      />
    </div>
  </div>
  <div
    className="relative flex flex--center-cross flex--center-main z1 hmin300"
    style={
      Object {
        "borderRadius": "18px",
        "height": "calc(100% - 18px)",
        "marginLeft": undefined,
        "marginTop": "-18px",
        "overflow": "hidden",
        "width": undefined,
      }
    }
  >
    <div
      className="loading loading--dark absolute z0"
    />
    <div
      className="relative overflow-hidden"
    >
      <img
        alt="example"
        src="../files/ios-vertical.png"
      />
    </div>
  </div>
</div>
`;
